# wordcounts

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordcounts/: __init__.py  plotting.py  wordcounts.py
tests/: test_wordcounts.py
