[tool.poetry]
name = "wordcounts"
version = "0.1.0"
description = "This package helps count the number of words in a given text"
authors = ["valli akella"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
